# 42-call_me_maybe

./: .gitignore  Makefile  README.md  pyproject.toml
data/input/: functions_definition.json
data/output/: function_calls.json
src/: __init__.py  __main__.py  parsing.py  process_data.py
src/classes/: Config.py  Tokenizer.py
tests/: test_config.py  test_main.py  test_parsing.py  test_tokenizer.py
