[project]
name = "my-python-project"
version = "0.1.0"
description = "42 Python project template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.0",
    "pydantic>=2.13.0",
]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.flake8]
exclude = [
    ".venv",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
]
